[package]
name = "alluxio-rs"
version = "0.1.0"
edition = "2021"
description = "rust alluxio rest api client"
license = "MIT"
repository = "https://github.com/hoslo/alluxio-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
url-escape = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-util = { version = "0.7.10", features = ["codec"] }
futures = "0.3.29"
